Changing pdf structure

--- a/interim_report.tex
+++ b/interim_report.tex
@@ -26,8 +26,8 @@ Your abstract goes here
 \end{abstract}
 
 \tableofcontents
-\listoffigures
-\listoftables
+% \listoffigures
+% \listoftables
 
 \input{introduction/introduction.tex}
 \input{background/background.tex}
