Finished first draft of intro

--- a/bibs/sample.bib
+++ b/bibs/sample.bib
@@ -1,9 +1,7 @@
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
+@article{BadNL,
+    author  = "Xiaoyi Chen and Ahmed Salem and Dingfan Chen and Michael Backes and Shiqing Ma and Qingni Shen and Zhonghai Wu and Yang Zhang",
+    title   = "BadNL: Backdoor Attacks against NLP Models with Semantic-preserving Improvements",
+    year    = "2020",
+    journal = "arXiv",
+    DOI     = "https://arxiv.org/abs/2006.01043",
 }
