Added Ethical issues considerations

--- a/ethical_issues/ethical_issues.tex
+++ b/ethical_issues/ethical_issues.tex
@@ -1,1 +1,11 @@
 \chapter{Ethical Issues}
+
+This project does not contain many ethical issues as it does not use any private, sensitive data for training any of the models that will be used. Moreover, 
+we are not including any form of physical materials that could harm any human or animal or provide any environmental impacts. The only consideration is the
+list of controversial topics we will be curating for our inference testing. Some of the topics may produce harmful content that could offend certain groups
+of people. However, this type of data may be necessary to be able to accurately test our hypothesis and be able to create correctly functioning models. To this 
+end, we will make sure not to use any potentially hateful messages explicitly in the report so as to not potentially offend anyone simply reading the report of this
+project.
+
+We will also comply with any licensing that will arise from using training data, pre-trained models or language models to create data and ensure any data we do use has
+been obtained legally and ethically and we are not using any potentially identifiable data.
