Working on the lit review

--- a/background/background.tex
+++ b/background/background.tex
@@ -1,1 +1,10 @@
 \chapter{Background}
+
+\section{Computer Vision}
+
+Within the field of Computer Vision, there has been a lot of work in creating and investigating models that hold hidden purposes. Many examples include inserting small
+patches of specific pixels into the target image, as seen in \cite{DBLP}. In this paper
+
+\section{NLP Backdoor Attacks}
+
+\subsection{BadNL}
