--- a/interim_report.tex
+++ b/interim_report.tex
@@ -31,6 +31,6 @@
 \input{conclusion/conclusion.tex}
 
 \bibliographystyle{unsrtnat}
-\bibliography{bibs/sample}
+\bibliography{bibs/bibliography}
 
 \end{document}
