--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -37,6 +37,9 @@ This distinction can be used to separate data flagged for the intended purpose, 
 We will be exploring multiple forms of potential detection of hidden purposes in this project. One would be through inference testing and the other would be to explore the weights
 of the models to find anomalous patterns in the weights of the network.
 
+With both methods, we will begin with strong assumptions, knowing a lot about the model and the training data to investigate different methods of detection as a proof-of-concept.
+Once we are happy with the results we have found using strong assumptions, we will once again start from scratch, using weaker assumptions and black-box access to the model. 
+
 \subsection{Heuristic Search of Controversial Topics}
 
 The first method would be to create an extensive list of example sentences on a range of controversial topics using a third-party language model such as GPT-2 or GPT-3. 
@@ -51,5 +54,12 @@ using a language model to create training data on hateful and non-hateful speech
 know performs correctly with no hidden intent, against that of an unknown model. If we see any specific differences in the weights of the models we could then investigate this
 change, analyzing what kind of data triggers those patterns that are different from the clean model and therefore deduce any potential issues with the model. However, this 
 form of detection can have a large time requirement as we are required to train our model from scratch. Moreover, if we come up with incorrect assumptions on the training data,
-we could end up creating a model that has a vastly different weight distribution to the target model. Finally, if we are not given access to the model then this method would
-not prove to work as we would not know which hyperparameters to use and could end up with a model that differs widly from the provided one.
+we could end up creating a model that has a vastly different weight distribution from the target model. Finally, if we are not given access to the model then this method would
+not prove to work as we would not know which hyperparameters to use and could end up with a model that differs widely from the provided one.
+
+\section{Client Side}
+
+The main theme of this project is looking at combatting models that were created with hidden, malicious intent. Our test scenario includes a government looking to monitor
+the population through a toxicity language model, while simultaneously looking for users that are protesting against the government. Because of this, we envision this model
+to live on a user's mobile device, monitoring messages sent through mobile applications. Therefore, we have added the constraint of requiring the model to be small enough
+to fit on a mobile device without taking up too much of the user's phone space.
