--- a/title/title.tex
+++ b/title/title.tex
@@ -1,12 +1,12 @@
 \begin{titlepage}
 
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} 
 
 %----------------------------------------------------------------------------------------
 %	LOGO SECTION
 %----------------------------------------------------------------------------------------
 
-\includegraphics[width=8cm]{title/logo.eps}\\[1cm] % Include a department/university logo - this will require the graphicx package
+\includegraphics[width=8cm]{title/logo.eps}\\[1cm]
  
 %----------------------------------------------------------------------------------------
 
@@ -16,16 +16,16 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE MEng Individual Project}\\[1.5cm] % Name of your university/college
-\textsc{\Large Imperial College London}\\[0.5cm] % Major heading such as course name
-\textsc{\large Department of Computing}\\[0.5cm] % Minor heading such as course title
+\textsc{\LARGE MEng Individual Project}\\[1.5cm] 
+\textsc{\Large Imperial College London}\\[0.5cm]
+\textsc{\large Department of Computing}\\[0.5cm]
 
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 \makeatletter
 \HRule \\[0.4cm]
-{ \huge \bfseries \@title}\\[0.4cm] % Title of your document
+{ \huge \bfseries \@title}\\[0.4cm]
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
